--- a/CFMessageQueue.Common/CFMessageQueue.Common.csproj
+++ b/CFMessageQueue.Common/CFMessageQueue.Common.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\..\cf-connection-messaging\CFConnectionMessaging.Common\CFConnectionMessaging.Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="MessageConverters\" />
+  </ItemGroup>
+
 </Project>
