fix: Various bug fixes to get messages from queues feat: Pass message content to hub in seralized format

--- a/CFMessageQueue.Hub/App.config
+++ b/CFMessageQueue.Hub/App.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<appSettings>
-		<add key="LocalPort" value="10000" />		
+		<add key="LocalPort" value="10000" />
+		<add key="MinQueuePort" value="10001" />
+		<add key="MaxQueuePort" value="10099" />
+		<add key="AdminSecurityKey" value="5005db05-35eb-4471-bd05-7883b746b196"/>
 	</appSettings>
 </configuration>
