--- a/CFMessageQueue.TestClient/CFMessageQueue.TestClient.csproj
+++ b/CFMessageQueue.TestClient/CFMessageQueue.TestClient.csproj
@@ -13,4 +13,8 @@
     <ProjectReference Include="..\CFMessageQueue.Common\CFMessageQueue.Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="NewFolder\" />
+  </ItemGroup>
+
 </Project>
