--- a/CFMessageQueue.Hub/App.config
+++ b/CFMessageQueue.Hub/App.config
@@ -4,6 +4,7 @@
 		<add key="LocalPort" value="10000" />
 		<add key="MinQueuePort" value="10001" />
 		<add key="MaxQueuePort" value="10099" />
+		<add key="MaxLogDays" value="7" />
 		<add key="AdminSecurityKey" value="5005db05-35eb-4471-bd05-7883b746b196"/>
 	</appSettings>
 </configuration>
